# multiterra

./: .gitignore  Pulumi.yaml  README.md  app.py  flake.nix  main.tf  outputs.tf  pyproject.toml  spec.yaml  teracloud.py  utilsAwsVM.py  variables.tf
examples/basic/: Pulumi.yaml  __main__.py  cloudinit.yaml  main.tf  outputs.tf  terraform.tfvars  variables.tf
multiterra/: __init__.py  generalized_cr.py
multiterra/network/: __init__.py  firewall.py  subnet.py  vpc.py
multiterra/storage/: __init__.py  bucket.py
multiterra/vm/: __init__.py  generalized_image.py  generalized_vm.py  image.py  utilsAwsVM.py  vm.py
plans/: common_interface.md  meeting_notes.md
providers/: aws.py  gcp.py
src/: GeneralizedCR.py  __init__.py  __main__.py  generalizedVM.py  main.py
src/network/: __init__.py  subnet.py  vpc.py
src/storage/: GeneralizedBucket.py
src/subnet/: __init__.py
src/vm/: GeneralizedImage.py  GeneralizedVM.py  __init__.py  generalizedVM.py  generalized_image.py  generalized_vm.py  utilsAwsVM.py
src/vpc/: __init__.py
tests/: test_generalized_cr.py
