[project]
name = "multiterra"
version = "0.1.0"
description = "A generalized interface for deploying to any cloud"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pulumi>=3.228.0",
    "pulumi-aws>=7.23.0",
    "pulumi-gcp>=9.19.0",
]

[build-system]
requires = ["uv_build>=0.11.6"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "multiterra"
module-root = ""


